--- a/package.json
+++ b/package.json
@@ -5,49 +5,51 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && ts-node ./src/server/postscirpt/script.ts",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^5.1.1",
-    "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.29.25",
-    "@trpc/client": "^10.34.0",
-    "@trpc/next": "^10.34.0",
-    "@trpc/react-query": "^10.34.0",
-    "@trpc/server": "^10.34.0",
+    "@nextui-org/react": "^2.1.10",
+    "@prisma/client": "^5.2.0",
+    "@t3-oss/env-nextjs": "^0.6.1",
+    "@tanstack/react-query": "^4.33.0",
+    "@trpc/client": "^10.38.1",
+    "@trpc/next": "^10.38.1",
+    "@trpc/react-query": "^10.38.1",
+    "@trpc/server": "^10.38.1",
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
-    "next": "^13.4.13",
+    "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.5.1",
+    "@types/cookie": "^0.5.2",
     "@types/eslint": "^8.44.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.16.0",
-    "@types/react": "^18.2.20",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^3.6.4",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.13",
-    "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.19.0"
