--- a/package.json
+++ b/package.json
@@ -10,48 +10,49 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@nextui-org/react": "^2.1.10",
-    "@prisma/client": "^5.2.0",
+    "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.2.9",
     "@t3-oss/env-nextjs": "^0.6.1",
-    "@tanstack/react-query": "^4.33.0",
-    "@trpc/client": "^10.38.1",
-    "@trpc/next": "^10.38.1",
-    "@trpc/react-query": "^10.38.1",
-    "@trpc/server": "^10.38.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.0",
+    "@trpc/next": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
+    "@trpc/server": "^10.45.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.17.9",
     "jsonwebtoken": "^9.0.2",
-    "next": "^13.4.19",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-pro-sidebar": "1.1.0-alpha.1",
     "react-toastify": "^9.1.3",
-    "superjson": "^1.13.1",
-    "zod": "^3.22.2"
+    "superjson": "^1.13.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@prisma/client": "^5.7.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.5.2",
-    "@types/eslint": "^8.44.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.5.9",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.2.0",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.5.4",
+    "@types/eslint": "^8.56.1",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "add": "^2.0.6",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^13.5.6",
+    "pnpm": "^8.14.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.7.1",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.19.0"
