--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
     "@trpc/server": "^10.45.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
-    "framer-motion": "^10.17.9",
+    "framer-motion": "^10.17.12",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-toastify": "^9.1.3",
     "superjson": "^1.13.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.8.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.5.4",
     "@types/eslint": "^8.56.1",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
@@ -49,7 +50,7 @@
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
