--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@internationalized/date": "^3.5.3",
+    "@nextui-org/button": "^2.0.31",
+    "@nextui-org/date-input": "^2.0.3",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/tabs": "^2.0.29",
+    "@nextui-org/theme": "^2.2.3",
+    "@react-aria/i18n": "^3.11.0",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.0",
