--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@uploadthing/react": "^6.6.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
     "framer-motion": "^10.17.12",
@@ -35,6 +36,7 @@
     "react-hook-form": "^7.50.1",
     "react-toastify": "^9.1.3",
     "superjson": "^1.13.3",
+    "uploadthing": "^6.12.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
