--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@internationalized/date": "^3.5.3",
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/date-input": "^2.0.3",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/tabs": "^2.0.29",
